--- a/templates/account/signup.html
+++ b/templates/account/signup.html
@@ -8,9 +8,9 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Registration Page</title>
-  <script src="https://cdn.tailwindcss.com"></script>
+  <script src="https://unpkg.com/@tailwindcss/browser@4"></script>
 </head>
-<body class="bg-gray-100">
+<body class="bg-gradient-to-r from-indigo-500 via-purple-600 to-pink-500 ">
 
   <!-- Registration Section -->
   <section class="min-h-screen flex items-center justify-center">
@@ -44,7 +44,7 @@
       <!-- Login Link -->
       <p class="text-center text-gray-600 mt-6">
         Already have an account? 
-        <a href="/accounts/login" 
+        <a href="{% url 'users:login_dashboard' %}" 
            class="text-blue-500 font-medium hover:underline">
           Login here
         </a>.
