--- a/templates/base.html
+++ b/templates/base.html
@@ -38,13 +38,20 @@
             <a href="{% url 'core:emp_dashboard' %}" class="text-white hover:text-gray-200 font-medium transition">Dashboard</a>
             <a href="{% url 'core:emp_profile'%}" class="text-white hover:text-gray-200 font-medium transition">Profile</a>
             <a href="{% url 'core:emp_list' %}" class="text-white hover:text-gray-200 font-medium transition">EmployeeList</a>
+            
+            <a href="{% url 'core:emp_trainings'%}" href="" class="text-white hover:text-gray-200 font-medium transition">Trainings</a>
+            <a href="{% url 'core:add_training'%}" href="" class="text-white hover:text-gray-200 font-medium transition">Add Trainings</a>
+            
+            <a href="{% url 'core:feedback' %}" class="text-white hover:text-gray-200 font-medium transition">Feedback</a>
+            
+            <a href="{% url 'core:emp_rewards' %}" class="text-white hover:text-gray-200 font-medium transition">Rewards</a>
+            <a href="{% url 'core:notification_center' %}" class="text-white hover:text-gray-200 font-medium transition">Messages</a>
+            <a href="{% url 'core:send_points' %}" class="text-white hover:text-gray-200 font-medium transition">Points</a>
+            <a href="{% url 'core:emp_talent'%}" href="" class="text-white hover:text-gray-200 font-medium transition">Talent</a>
+            <a href="{% url 'core:emp_promotion' %}" class="text-white hover:text-gray-200 font-medium transition">Promotion</a>
             <a href="{% url 'core:emp_skillgap'%}" class="text-white hover:text-gray-200 font-medium transition">Skillgap</a>
             <a href="{% url 'core:emp_reports'%}" href="" class="text-white hover:text-gray-200 font-medium transition">Reports</a>
-            <a href="{% url 'core:emp_trainings'%}" href="" class="text-white hover:text-gray-200 font-medium transition">Trainings</a>
-            <a href="{% url 'core:emp_talent'%}" href="" class="text-white hover:text-gray-200 font-medium transition">Talent</a>
-            <a href="{% url 'core:feedback' %}" class="text-white hover:text-gray-200 font-medium transition">Feedback</a>
-            <a href="{% url 'core:emp_promotion' %}" class="text-white hover:text-gray-200 font-medium transition">Promotion</a>
-            <a href="{% url 'core:emp_rewards' %}" class="text-white hover:text-gray-200 font-medium transition">Rewards</a>
+            
           {% else %}
             <a href="{% url 'users:login_dashboard' %}" class="px-4 py-2 rounded bg-white text-teal-600 hover:bg-gray-100 transition">Login</a>
             <a href="/accounts/register" class="px-4 py-2 rounded bg-white text-teal-600 hover:bg-gray-100 transition">Register</a>
@@ -89,18 +96,24 @@
         <a href="{% url 'core:emp_dashboard' %}" class="text-white hover:text-gray-200 font-medium transition">Dashboard</a>
         <a href="{% url 'core:emp_profile'%}" class="text-white hover:text-gray-200 font-medium transition">Profile</a>
         <a href="{% url 'core:emp_list' %}" class="text-white hover:text-gray-200 font-medium transition">EmployeeList</a>
+        
+        <a href="{% url 'core:emp_trainings'%}" href="" class="text-white hover:text-gray-200 font-medium transition">Trainings</a>
+        <a href="{% url 'core:add_training'%}" href="" class="text-white hover:text-gray-200 font-medium transition">Add Trainings</a>
+        
+        <a href="{% url 'core:feedback' %}" class="text-white hover:text-gray-200 font-medium transition">Feedback</a>
+        
+        <a href="{% url 'core:emp_rewards' %}" class="text-white hover:text-gray-200 font-medium transition">Rewards</a>
+        <a href="{% url 'core:notification_center' %}" class="text-white hover:text-gray-200 font-medium transition">Messages</a>
+        <a href="{% url 'core:send_points' %}" class="text-white hover:text-gray-200 font-medium transition">Points</a>
+        <a href="{% url 'core:emp_talent'%}" href="" class="text-white hover:text-gray-200 font-medium transition">Talent</a>
+        <a href="{% url 'core:emp_promotion' %}" class="text-white hover:text-gray-200 font-medium transition">Promotion</a>
         <a href="{% url 'core:emp_skillgap'%}" class="text-white hover:text-gray-200 font-medium transition">Skillgap</a>
         <a href="{% url 'core:emp_reports'%}" href="" class="text-white hover:text-gray-200 font-medium transition">Reports</a>
-        <a href="{% url 'core:emp_trainings'%}" href="" class="text-white hover:text-gray-200 font-medium transition">Trainings</a>
-        <a href="{% url 'core:emp_talent'%}" href="" class="text-white hover:text-gray-200 font-medium transition">Talent</a>
-        <a href="{% url 'core:feedback' %}" class="text-white hover:text-gray-200 font-medium transition">Feedback</a>
-        <a href="{% url 'core:mng_dashboard' %}" class="text-white hover:text-gray-200 font-medium transition">Dashboard_M</a>
-        <a href="{% url 'core:emp_promotion' %}" class="text-white hover:text-gray-200 font-medium transition">Promotion</a>
-        <a href="{% url 'core:emp_rewards' %}" class="text-white hover:text-gray-200 font-medium transition">Rewards</a>
+        
       {% else %}
         <a href="{% url 'users:login_dashboard' %}" class="px-4 py-2 rounded bg-white text-teal-600 hover:bg-gray-100 transition">Login</a>
         <a href="/accounts/register" class="px-4 py-2 rounded bg-white text-teal-600 hover:bg-gray-100 transition">Register</a>
-        {% endif %}
+      {% endif %}
       </div>
     </div>
   </nav>
